Fixed notifications alignment

--- a/app/assets/stylesheets/_variables.css.scss
+++ b/app/assets/stylesheets/_variables.css.scss
@@ -2,7 +2,7 @@
 
 $black:         #384047;
 
-$blue:          #5fafef;
+$blue:          darken(#5fafef, 3%);
 $blue-light:    lighten($blue, 10%);
 $purple:        #6700B9;
 $purple-light:  lighten($purple, 10%);
